<resources>
    <string name="progress_min_time">2500</string>
    <string name="app_name">LipSync Connect</string>
    <string name="main_activity_title">LipSync Connect</string>
    <string name="lipsync_gaming_activity_title">LipSync Gaming</string>
    <string name="main_fragment_title">LipSync Connect</string>
    <string name="mouse_fragment_title">LipSync Mouse</string>
    <string name="gaming_fragment_title">LipSync Gaming</string>
    <string name="wireless_fragment_title">LipSync Wireless</string>
    <string name="macro_fragment_title">LipSync Macro</string>
    <string name="version_fragment_title">Version Number</string>
    <string name="debug_fragment_title">Debug</string>
    <string name="calibration_fragment_title">Calibration</string>
    <string name="initialization_fragment_title">Initialization</string>
    <string name="pressure_threshold_fragment_title">Pressure Threshold</string>
    <string name="gaming_button_mode_fragment_title">Button Mode</string>
    <string name="mouse_sensitivity_fragment_title">Sensitivity</string>
    <string name="gaming_sensitivity_fragment_title">Sensitivity</string>
    <string name="wireless_sensitivity_fragment_title">Sensitivity</string>
    <string name="macro_sensitivity_fragment_title">Sensitivity</string>
    <string name="mouse_mapping_fragment_title">Mapping</string>
    <string name="gaming_mapping_fragment_title">Mapping</string>
    <string name="wireless_mapping_fragment_title">Mapping</string>
    <string name="macro_mapping_fragment_title">Mapping</string>
    <string name="wireless_bluetooth_config_fragment_title">Bluetooth Config</string>
    <string name="macro_bluetooth_config_fragment_title">Bluetooth Config</string>
    <string name="deadzone_fragment_title">Deadzone</string>
    <string name="factory_reset_fragment_title">Factory Reset</string>
    <string name="wireless_communication_mode_fragment_title">Communication Mode</string>
    <string name="help_fragment_title">Help</string>
    <string name="default_status_text">Please plug Lipsync/Arduino via OTG.</string>
    <string name="perm_denied_status_text">Permission denied...</string>
    <string name="attached_status_text">Lipsync/Arduino attached!</string>
    <string name="detached_status_text">Lipsync/Arduino detached</string>
    <string name="main_fragment_default_change_text">Waiting...</string>
    <string name="main_fragment_mouse_button_text">LipSync Mouse</string>
    <string name="main_fragment_gaming_button_text">LipSync Gaming</string>
    <string name="main_fragment_wireless_button_text">LipSync Wireless</string>
    <string name="main_fragment_macro_button_text">LipSync Macro</string>
    <string name="main_fragment_help_button_text">Help</string>
    <string name="mouse_fragment_default_change_text">Waiting...</string>
    <string name="gaming_fragment_default_change_text">Waiting...</string>
    <string name="wireless_fragment_default_change_text">Waiting...</string>
    <string name="macro_fragment_default_change_text">Waiting...</string>
    <string name="mouse_sensitivity_fragment_default_change_text">Waiting...</string>
    <string name="mouse_sensitivity_fragment_inc_button_text">Increase</string>
    <string name="mouse_sensitivity_fragment_dec_button_text">Decrease</string>
    <string name="gaming_sensitivity_fragment_default_change_text">Waiting...</string>
    <string name="gaming_sensitivity_fragment_inc_button_text">Increase</string>
    <string name="gaming_sensitivity_fragment_dec_button_text">Decrease</string>
    <string name="wireless_sensitivity_fragment_default_change_text">Waiting...</string>
    <string name="wireless_sensitivity_fragment_inc_button_text">Increase</string>
    <string name="wireless_sensitivity_fragment_dec_button_text">Decrease</string>
    <string name="macro_sensitivity_fragment_default_change_text">Waiting...</string>
    <string name="macro_sensitivity_fragment_inc_button_text">Increase</string>
    <string name="macro_sensitivity_fragment_dec_button_text">Decrease</string>
    <string name="initialization_fragment_default_change_text">Waiting...</string>
    <string name="initialization_fragment_button_text">Initialization</string>
    <string name="calibration_fragment_default_change_text">Waiting...</string>
    <string name="calibration_fragment_button_text">Calibration</string>
    <string name="pressure_threshold_fragment_default_change_text">Waiting...</string>
    <string name="pressure_threshold_fragment_default_value_text">0%</string>
    <string name="pressure_threshold_fragment_set_button_text">Set Threshold</string>
    <string name="pressure_threshold_fragment_dec_button_text">-</string>
    <string name="pressure_threshold_fragment_inc_button_text">+</string>
    <string name="pressure_threshold_puff_label_text">Puff(V)</string>
    <string name="pressure_threshold_sip_label_text">Sip(V)</string>
    <string name="pressure_threshold_nominal_label_text">Nominal(V)</string>
    <string name="pressure_threshold_puff_value_text">2.5</string>
    <string name="pressure_threshold_nominal_value_text">2.5</string>
    <string name="pressure_threshold_sip_value_text">2.5</string>
    <string name="gaming_button_mode_fragment_default_change_text">Waiting...</string>
    <string name="gaming_button_mode_fragment_one_button_text">Mode 1</string>
    <string name="gaming_button_mode_fragment_two_button_text">Mode 2</string>
    <string name="mouse_mapping_fragment_default_change_text">Waiting...</string>
    <string name="mouse_mapping_fragment_set_button_text">Set Mapping</string>
    <string name="gaming_mapping_fragment_default_change_text">Waiting...</string>
    <string name="gaming_mapping_fragment_set_button_text">Set Mapping</string>
    <string name="wireless_mapping_fragment_default_change_text">Waiting...</string>
    <string name="wireless_mapping_fragment_set_button_text">Set Mapping</string>
    <string name="macro_mapping_fragment_default_change_text">Waiting...</string>
    <string name="macro_mapping_fragment_set_button_text">Set Mapping</string>
    <string name="wireless_communication_mode_fragment_default_change_text">Waiting...</string>
    <string name="wireless_communication_mode_fragment_usb_button_text">USB Mode</string>
    <string name="wireless_communication_mode_fragment_bt_button_text">Bluetooth Mode</string>
    <string name="mapping_fragment_short_puff_action_text">Short Puff:</string>
    <string name="mapping_fragment_short_sip_action_text">Short Sip:</string>
    <string name="mapping_fragment_long_puff_action_text">Long Puff:</string>
    <string name="mapping_fragment_long_sip_action_text">Long Sip:</string>
    <string name="mapping_fragment_very_long_puff_action_text">Very Long Puff:</string>
    <string name="mapping_fragment_very_long_sip_action_text">Very Long Sip:</string>
    <string name="help_fragment_default_change_text">Waiting...</string>
    <string name="help_fragment_default_text">LipSync Connect Application is developed to assist LipSync users to customize their devices based on their needs. \n\nPlease connect your LipSync to your Android device through USB OTG Cable and then open the LipSync Connect Application.\n\nThe Application will automatically detect your LipSync Model and unlock the settings button for your LipSync Model.\n\nTap or click on your LipSync model and then navigate the available settings options.\n\nTap or click on the option and perform the adjustment action.\n\nNote: Please avoid disconnecting the USB cable or closing the Application during settings change process or loading process of settings options.</string>
    <string-array name="mouse_mapping_fragment_button_main_titles">
        <item>Left Click</item>
        <item>Right Click</item>
        <item>Drag</item>
        <item>Scroll</item>
        <item>Middle Click</item>
        <item>Initialization</item>
        <item>Calibration</item>
    </string-array>
    <string-array name="mouse_mapping_fragment_button_secondary_titles">
        <item>Tap</item>
        <item>Tap-and-hold</item>
        <item>Press+Hold left</item>
        <item>Scroll</item>
        <item>Middle Click</item>
        <item>Initialize FSRs</item>
        <item>Calibrate FSRs</item>
    </string-array>
    <string-array name="mouse_mapping_fragment_button_images">
        <item>@drawable/mapping_left_click</item>
        <item>@drawable/mapping_right_click</item>
        <item>@drawable/mapping_drag</item>
        <item>@drawable/mapping_scroll</item>
        <item>@drawable/mapping_middle_click</item>
        <item>@drawable/mapping_initialization</item>
        <item>@drawable/mapping_calibration</item>
    </string-array>
    <string-array name="gaming_mapping_fragment_button_main_titles">
        <item>Button 1</item>
        <item>Button 2</item>
        <item>Button 3</item>
        <item>Button 4</item>
        <item>Button 5</item>
        <item>Button 6</item>
        <item>Button 7</item>
        <item>Button 8</item>
    </string-array>
    <string-array name="gaming_mapping_fragment_button_secondary_titles">
        <item>Left: X1. Right: View</item>
        <item>Left: X2. Right: Menu</item>
        <item>Left: LS. Right: RS</item>
        <item>Left: LB. Right: RB</item>
        <item>Left: A. Right: X</item>
        <item>Left: B. Right: Y</item>
        <item>Left: View. Right: X1</item>
        <item>Left: Menu. Right: X2</item>
    </string-array>
    <string-array name="gaming_mapping_fragment_button_images">
        <item>@drawable/mapping_x1_button</item>
        <item>@drawable/mapping_x2_button</item>
        <item>@drawable/mapping_ls_button</item>
        <item>@drawable/mapping_lb_button</item>
        <item>@drawable/mapping_a_button</item>
        <item>@drawable/mapping_b_button</item>
        <item>@drawable/mapping_view_button</item>
        <item>@drawable/mapping_menu_button</item>
    </string-array>
    <string-array name="wireless_mapping_fragment_button_main_titles">
        <item>Left Click</item>
        <item>Right Click</item>
        <item>Drag</item>
        <item>Scroll</item>
        <item>Middle Click</item>
        <item>Initialization</item>
        <item>Calibration</item>
    </string-array>
    <string-array name="wireless_mapping_fragment_button_secondary_titles">
        <item>Tap</item>
        <item>Tap-and-hold</item>
        <item>Press+Hold left</item>
        <item>Scroll</item>
        <item>Middle Click</item>
        <item>Initialize FSRs</item>
        <item>Calibrate FSRs</item>
    </string-array>
    <string name="calibration_default_description">Press Calibration Button to start calibration process.</string>
    <string name="communication_mode_default_description">Press USB Mode Button or Bluetooth Mode Button to select the communication mode.</string>
    <string name="debug_fragment_default_change_text">Waiting...</string>
    <string name="debug_fragment_on_button_text">Start</string>
    <string name="debug_fragment_off_button_text">Stop</string>
    <string name="debug_fragment_share_button_text">Share</string>
    <string name="debug_fragment_default_data_text"></string>
    <string name="sensitivity_dec_set_send_command">SS,1:1</string>
    <string name="sensitivity_inc_set_send_command">SS,1:2</string>
    <string name="debug_off_set_send_command">DM,1:0</string>
    <string name="debug_on_set_send_command">DM,1:1</string>
    <string name="calibration_set_send_command">CA,1:1</string>
    <string name="button_mode_one_set_send_command">BM,1:1</string>
    <string name="button_mode_two_set_send_command">BM,1:2</string>
    <string name="communication_mode_usb_set_send_command">CM,1:0</string>
    <string name="communication_mode_bt_set_send_command">CM,1:1</string>
</resources>