<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/gamingButtonModeFragmentLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
tools:context=".Fragments.GamingButtonModeFragment">
    <LinearLayout
        android:id="@+id/gamingButtonModeFragmentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/gamingButtonModeChangeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:padding="16dip"
            android:text="@string/gaming_button_mode_fragment_default_change_text"
            android:background="@color/colorPrimaryLight" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gamingButtonModeFragmentMiddle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/gamingButtonModeFragmentTop"
        android:paddingLeft="@dimen/fragment_left_padding"
        android:paddingRight="@dimen/fragment_right_padding"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/gamingButtonModeOneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/gaming_button_mode_fragment_one_button_text"
            android:tag="@string/button_mode_one_set_send_command"
            />

        <Button
            android:id="@+id/gamingButtonModeTwoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/modeOneButton"
            android:text="@string/gaming_button_mode_fragment_two_button_text"
            android:tag="@string/button_mode_two_set_send_command"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gamingButtonModeFragmentBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/gamingButtonModeStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip"
            android:gravity="center"
            android:text="@string/default_status_text"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</RelativeLayout>