<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wirelessSensitivityFragmentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Fragments.WirelessSensitivityFragment">
    <LinearLayout
        android:id="@+id/wirelessSensitivityFragmentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/wirelessSensitivityChangeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="16dip"
            android:text="@string/wireless_sensitivity_fragment_default_change_text"
            android:background="@color/colorPrimaryLight" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/wirelessSensitivityFragmentMiddle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/wirelessSensitivityFragmentTop"
        android:paddingLeft="@dimen/fragment_left_padding"
        android:paddingRight="@dimen/fragment_right_padding"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/wirelessSensitivityIncButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/wireless_sensitivity_fragment_inc_button_text"
            android:tag="@string/sensitivity_inc_set_send_command"
            />

        <Button
            android:id="@+id/wirelessSensitivityDecButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/sensIncButton"
            android:text="@string/wireless_sensitivity_fragment_dec_button_text"
            android:tag="@string/sensitivity_dec_set_send_command"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/wirelessSensitivityFragmentBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/wirelessSensitivityStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/default_status_text"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</RelativeLayout>