<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wirelessCommunicationModeFragmentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Fragments.WirelessCommunicationModeFragment">
    <LinearLayout
        android:id="@+id/wirelessCommunicationModeFragmentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:textStyle="bold"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/wirelessCommunicationModeChangeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="16dip"
            android:text="@string/wireless_communication_mode_fragment_default_change_text"
            android:background="@color/colorPrimaryLight" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/wirelessCommunicationModeFragmentMiddle1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/wirelessCommunicationModeFragmentTop"
        android:paddingLeft="@dimen/fragment_left_padding"
        android:paddingRight="@dimen/fragment_right_padding"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/wirelessCommunicationModeUsbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/wireless_communication_mode_fragment_usb_button_text"
            android:tag="@string/communication_mode_usb_set_send_command"
            />

        <Button
            android:id="@+id/wirelessCommunicationModeBtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/modeOneButton"
            android:text="@string/wireless_communication_mode_fragment_bt_button_text"
            android:tag="@string/communication_mode_bt_set_send_command"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/wirelessCommunicationModeFragmentMiddle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wirelessCommunicationModeFragmentTop"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/fragment_left_padding"
        android:paddingRight="@dimen/fragment_right_padding">
        <ImageView
            android:id="@+id/communicationModImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/communication_mode_default_description"
            android:src="@drawable/communication_mode_default" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/wirelessCommunicationModeFragmentBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/wirelessCommunicationModeStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/default_status_text"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</RelativeLayout>