<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/debugFragmentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Fragments.DebugFragment">
    <LinearLayout
        android:id="@+id/debugFragmentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/debugChangeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:padding="16dip"
            android:text="@string/debug_fragment_default_change_text"
            android:background="@color/colorPrimaryLight" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/debugFragmentMiddle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/debugFragmentTop"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/debugFragmentMiddle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/debugFragmentTop"
            android:paddingLeft="@dimen/fragment_left_padding"
            android:paddingRight="@dimen/fragment_right_padding"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/debugOnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/debug_fragment_on_button_text"
                android:tag="@string/debug_on_set_send_command"
                />
            <Button
                android:id="@+id/debugShareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/debug_fragment_share_button_text"
                android:tag=""
                />
            <Button
                android:id="@+id/debugOffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/debugOnButton"
                android:text="@string/debug_fragment_off_button_text"
                android:tag="@string/debug_off_set_send_command"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/debugFragmentMiddle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/debugFragmentMiddle1"
            android:paddingLeft="@dimen/fragment_left_padding"
            android:paddingRight="@dimen/fragment_right_padding"
            android:orientation="vertical">
            <ScrollView
                android:id="@+id/debugScrollView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:fillViewport="true">
                <TextView
                    android:id="@+id/debugDataTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="18dip"
                    android:gravity="center"
                    android:layout_weight="1.0"
                    android:text="@string/debug_fragment_default_data_text"/>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/debugFragmentBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/debugStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip"
            android:gravity="center"
            android:text="@string/default_status_text"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</RelativeLayout>