<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calibrationFragmentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Fragments.CalibrationFragment">
    <LinearLayout
        android:id="@+id/calibrationFragmentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/calibrationChangeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="16dip"
            android:text="@string/calibration_fragment_default_change_text"
            android:background="@color/colorPrimaryLight" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calibrationFragmentMiddle1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/calibrationFragmentTop"
        android:paddingLeft="@dimen/fragment_left_padding"
        android:paddingRight="@dimen/fragment_right_padding"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calibrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/calibration_fragment_button_text"
            android:tag="@string/calibration_set_send_command"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calibrationFragmentMiddle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calibrationFragmentTop"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <ImageView
            android:id="@+id/calibrationImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/calibration_default_description"
            android:src="@drawable/calibration_default" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calibrationFragmentBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/calibrationStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/default_status_text"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</RelativeLayout>